# xash3d-master

./: .gitignore  .justfile  Cargo.toml  README.md  deny.toml  xash3d-master@.service
.github/workflows/: test.yaml
Documentation/: installation.md
admin/: Cargo.toml
admin/src/: cli.rs  main.rs
config/: main.toml
crates/benchmarks/: Cargo.toml  LICENSE-LGPL-3.0.txt  README.md
crates/benchmarks/benches/: protocol.rs
crates/xash3d-admin/: Cargo.toml  LICENSE-GPL-3.0.txt
crates/xash3d-master/: Cargo.toml  LICENSE-AGPL-3.0.txt
crates/xash3d-master/config/: default.toml
crates/xash3d-master/src/: app.rs  challenge.rs  cli.rs  config.rs  hash_map.rs  logger.rs  main.rs  master_server.rs  metrics.rs  periodic.rs  signal_flags.rs  signals.rs  stats.rs  udp_server.rs  worker.rs
crates/xash3d-master/src/master_server/: tests.rs
crates/xash3d-master/src/stats/: imp.rs  stub.rs
crates/xash3d-master/src/udp_server/: tests.rs
crates/xash3d-observer/: Cargo.toml
crates/xash3d-observer/examples/: monitor.rs
crates/xash3d-observer/src/: connection.rs  event.rs  filter.rs  lib.rs  master.rs  net.rs  observer.rs  server.rs
crates/xash3d-observer/tests/: basic.rs
crates/xash3d-protocol/: Cargo.toml
crates/xash3d-protocol/src/: color.rs  cursor.rs  error.rs  filter.rs  lib.rs  map.rs  net.rs  server_info.rs  wrappers.rs
crates/xash3d-protocol/src/cursor/: read.rs  write.rs
crates/xash3d-protocol/src/net/: admin.rs  broker.rs  game.rs  master.rs  server.rs
crates/xash3d-query/: Cargo.toml
crates/xash3d-query/src/: cli.rs  color.rs  logger.rs  main.rs  monitor_servers.rs  query_servers_info.rs  server_info.rs  server_result.rs  utils.rs
crates/xash3d-query/tests/: json.rs
crates/xash3d-test-utils/: Cargo.toml
crates/xash3d-test-utils/src/: logger.rs  server.rs
master/: Cargo.toml
master/config/: default.toml  main.toml
master/src/: cleanup.rs  cli.rs  config.rs  hash_map.rs  lib.rs  logger.rs  main.rs  master_server.rs  periodic.rs  stats.rs  str_arr.rs  time.rs
master/src/master_server/: str_arr.rs  tests.rs
master/src/stats/: stub.rs
master/tests/: master.rs  server_add.rs
observer/: Cargo.toml
observer/examples/: monitor.rs  monitor_new.rs
observer/src/: connection.rs  event.rs  lib.rs  net.rs  observer_new.rs  observer_old.rs
protocol/: Cargo.toml  build.rs
protocol/src/: admin.rs  color.rs  cursor.rs  filter.rs  game.rs  lib.rs  master.rs  net.rs  server.rs  server_info.rs  types.rs  wrappers.rs
protocol/src/cursor/: cursor_mut.rs  read.rs  write.rs
protocol/src/net/: admin.rs  broker.rs  game.rs  master.rs  server.rs
query/: Cargo.toml  README.md
query/src/: cli.rs  color.rs  list_servers.rs  main.rs  monitor_servers.rs  query_servers_info.rs  server_info.rs  server_result.rs
src/: cli.rs  client.rs  config.rs  filter.rs  main.rs  master_server.rs  parser.rs  server.rs  server_info.rs
supply-chain/: audits.toml  config.toml
