[workspace]
resolver = "2"
members = [
	"protocol",
	"master",
	"admin",
	"query",
	"observer",
]
default-members = ["master", "protocol"]

[workspace.package]
authors = ["Denis Drakhnia <numas13@gmail.com>"]
rust-version = "1.68"
homepage = "https://xash.su"
repository = "https://github.com/FWGS/xash3d-master"

[workspace.dependencies]
xash3d-protocol = { path = "protocol", version = "0.2.0", features = ["net"] }
xash3d-observer = { path = "observer", version = "0.1.0" }
log = "0.4"
bitflags = "2.4"
thiserror = "2"
getopts = "0.2.21"
blake2b_simd = "1.0"
serde = { version = "1.0.188", features = ["derive"] }
crossterm = { version = "0.28", default-features = false, features = ["events", "bracketed-paste"] }

[profile.release]
codegen-units = 1
lto = true
strip = "debuginfo"
