[package]
name = "xash3d-admin"
description = "Admin tool for Xash3D master server"
version = "0.2.0"
license = "GPL-3.0-only"
keywords = ["xash3d"]
categories = ["command-line-utilities"]
authors.workspace = true
edition = "2021"
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
getopts.workspace = true
crossterm = "0.25.0"
blake2b_simd.workspace = true
xash3d-protocol.workspace = true
