[package]
name = "xash3d-master"
description = "Master server for games on Xash3D engine"
version = "0.1.0"
license = "GPL-3.0-only"
keywords = ["xash3d"]
categories = ["command-line-utilities"]
authors = ["Denis Drakhnia <numas13@gmail.com>"]
edition = "2021"
rust-version = "1.56"
homepage = "https://xash.su"
repository = "https://git.mentality.rip/numas13/xash3d-master"

[features]
default = ["logtime"]
logtime = ["chrono"]
stats = []

[dependencies]
thiserror = "1.0.49"
getopts = "0.2.21"
log = "0.4.18"
bitflags = "2.4"
fastrand = "2.0.1"
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.5.11"
blake2b_simd = "1.0"
ahash = "0.4.8"
xash3d-protocol = { path = "../protocol", version = "0.1.0" }

[target.'cfg(not(windows))'.dependencies]
signal-hook = { version = "0.3.17", default-features = false }

[dependencies.chrono]
version = "0.4.26"
optional = true
default-features = false
features = ["clock"]
