[package]
name = "xash3d-master"
description = "Master server for games on Xash3D engine"
version = "0.2.1"
license = "GPL-3.0-only"
keywords = ["xash3d"]
categories = ["command-line-utilities"]
authors.workspace = true
edition = "2021"
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = ["logtime"]
logtime = ["chrono"]
stats = []

[dependencies]
thiserror.workspace = true
getopts.workspace = true
log.workspace = true
bitflags.workspace = true
fastrand = "2.0.1"
serde.workspace = true
toml = "0.5.11"
blake2b_simd.workspace = true
ahash = "0.4.8"
xash3d-protocol.workspace = true

[target.'cfg(not(windows))'.dependencies]
signal-hook = { version = "0.3.17", default-features = false }

[dependencies.chrono]
version = "0.4.26"
optional = true
default-features = false
features = ["clock"]
