[package]
name = "xash3d-master"
description = "Master server for games on Xash3D engine"
version = "0.2.1"
license = "LGPL-3.0-only"
keywords = ["xash3d"]
categories = ["command-line-utilities"]
authors.workspace = true
edition = "2021"
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = ["logtime"]
# unused in this version
logtime = []
stats = []

[[bin]]
name = "xash3d-master"
path = "bin/main.rs"

[dependencies]
thiserror.workspace = true
getopts.workspace = true
log.workspace = true
bitflags.workspace = true
fastrand.workspace = true
serde.workspace = true
toml = "0.5.11"
blake2b_simd.workspace = true
ahash = "0.8"
xash3d-protocol.workspace = true

[target.'cfg(not(windows))'.dependencies]
signal-hook = { version = "0.3.17", default-features = false }
