[package]
name = "xash3d-query"
description = "Tool for querying servers from Xash3D master server"
version = "0.1.0"
license = "GPL-3.0-only"
keywords = ["xash3d"]
categories = ["command-line-utilities"]
authors = ["Denis Drakhnia <numas13@gmail.com>"]
edition = "2021"
rust-version = "1.56"
homepage = "https://xash.su"
repository = "https://git.mentality.rip/numas13/xash3d-master"

[features]
default = ["color"]
color = ["crossterm"]

[dependencies]
libc = "0.2.148"
thiserror = "1.0.49"
getopts = "0.2.21"
fastrand = "2.0.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
crossterm = { version = "0.25.0", default-features = false, optional = true }
xash3d-protocol = { path = "../protocol", version = "0.1.0" }
