[package]
name = "xash3d-query"
description = "Tool for querying servers from Xash3D master server"
version = "0.2.0"
license = "GPL-3.0-only"
keywords = ["xash3d"]
categories = ["command-line-utilities"]
authors.workspace = true
edition = "2021"
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = ["color"]
color = ["crossterm"]

[dependencies]
libc = "0.2.148"
thiserror.workspace = true
getopts.workspace = true
fastrand = "2.0.1"
serde.workspace = true
serde_json = "1.0.107"
crossterm = { workspace = true, optional = true }
xash3d-protocol.workspace = true
xash3d-observer.workspace = true
