[package]
name = "xash3d-protocol"
description = "Network protocol library for Xash3D engine"
version = "0.2.0"
license = "LGPL-3.0-only"
keywords = ["xash3d"]
categories = ["parsing"]
authors.workspace = true
edition = "2021"
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = ["std", "net"]
std = ["alloc"]
alloc = []
net = ["std"]

[dependencies]
log.workspace = true
bitflags.workspace = true
