[package]
name = "xash3d-query"
description = "Tool for querying servers from Xash3D master server"
version = "0.2.0"
license = "GPL-3.0-only"
keywords = ["xash3d"]
categories = ["command-line-utilities"]
authors.workspace = true
edition = "2021"
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = ["color"]
color = ["crossterm"]

[dependencies]
libc.workspace = true
log.workspace = true
thiserror.workspace = true
getopts.workspace = true
fastrand.workspace = true
serde.workspace = true
serde_json.workspace = true
crossterm = { workspace = true, optional = true }
xash3d-protocol.workspace = true
xash3d-observer.workspace = true
